--- a/Gallay.html
+++ b/Gallay.html
@@ -111,20 +111,23 @@ img.logo {
       </div>
     </div>
     <div class="carousel-item">
-      <img src="pic4.jpeg" alt="New York" class="d-block img-fluid">
-      <h3>Bangladesh nature </h3>
-      <p>
-      Bangladesh is a small and beautiful asian country bordered by India and Burma and by the Bay of Bengal to the south. The capital is Dhaka, located in central Bangladesh. Other major cities include Chittagong, Khulna, Rajshahi, Sylhet, Barisal, Bogra, Comilla, Mymensingh and Rangpur. Bangladesh is small in area, but quite rich in heritage with numerous historical and archeological sites.  </p>
+      <img src="pic4.jpeg" alt="Imge York" class="d-block img-fluid">
+      <div class="carousel-caption">
+        <h3>Bangladesh nature </h3>
+        <p>
+        Bangladesh is a small and beautiful asian country bordered by India and Burma and by the Bay of Bengal to the south. The capital is Dhaka, located in central Bangladesh. Other major cities include Chittagong, Khulna, Rajshahi, Sylhet, Barisal, Bogra, Comilla, Mymensingh and Rangpur. Bangladesh is small in area, but quite rich in heritage with numerous historical and archeological sites. </p>
+
     </div>
     </div>
     <div class="carousel-item">
       <img src="pic5.jpg" alt="New York" class="d-block img-fluid">
-      <h3>Bangladesh nature </h3>
-      <p>
-      Bangladesh is a small and beautiful asian country bordered by India and Burma and by the Bay of Bengal to the south. The capital is Dhaka, located in central Bangladesh. Other major cities include Chittagong, Khulna, Rajshahi, Sylhet, Barisal, Bogra, Comilla, Mymensingh and Rangpur. Bangladesh is small in area, but quite rich in heritage with numerous historical and archeological sites.  </p>
+      <div class="carousel-caption">
+        <h3>Bangladesh nature </h3>
+        <p>
+        Bangladesh is a small and beautiful asian country bordered by India and Burma and by the Bay of Bengal to the south. The capital is Dhaka, located in central Bangladesh. Other major cities include Chittagong, Khulna, Rajshahi, Sylhet, Barisal, Bogra, Comilla, Mymensingh and Rangpur. Bangladesh is small in area, but quite rich in heritage with numerous historical and archeological sites.  </p>
+      </div>
     </div>
-    </div>
-  </div>
+
 
   <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
