--- a/index.html
+++ b/index.html
@@ -64,14 +64,11 @@ img.logo {
     </ul>
 
   </div>
-  <form class="form-inline ml-auto" >
-  <input class="form-control" type="text" placeholder="Search">
-  <button class="btn btn-success" >Search</button>
-  </form>
+ 
 </nav>
 
 
-<div class="">
+<div class="mt-3">
   <div class="row">
     <div class="col-4">
       <img src="Tij.jpg" alt="nature" class="img-fluid">
