--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ img.logo {
 </nav>
 
 
-<div class="mt-3">
+<div class="contain mt-3">
   <div class="row">
     <div class="col-4">
       <img src="Tij.jpg" alt="nature" class="img-fluid">
